--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,6 +7,7 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.jcrfsuite-0.6.1.jar=E:\\thien\\Learning\\NLP\\Project\\Code\\trafficqalib\\dist\\lib\\jcrfsuite-0.6.1.jar
 file.reference.json-20160212.jar=E:\\thien\\Learning\\NLP\\Project\\Code\\trafficqalib\\dist\\lib\\json-20160212.jar
+file.reference.log4j-1.2.17.jar=log4j-1.2.17.jar
 file.reference.Similarity_Measure.jar=E:\\thien\\Learning\\NLP\\Project\\Code\\trafficqalib\\dist\\lib\\Similarity Measure.jar
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/jtds-1.3.1.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.38.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/sqljdbc.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/tools.jar:${j2ee.server.home}/lib/websocket-api.jar
 #Wed Oct 19 22:14:34 ICT 2016
@@ -62,7 +63,8 @@ javac.classpath=\
     ${reference.trafficqalib.jar}:\
     ${file.reference.Similarity_Measure.jar}:\
     ${file.reference.jcrfsuite-0.6.1.jar}:\
-    ${file.reference.json-20160212.jar}
+    ${file.reference.json-20160212.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
