deploy on new server

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -89,7 +89,7 @@ endorsed.classpath=\
 javadoc.use=true
 build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
-war.name=TrafficQAService.war
+war.name=ROOT.war
 javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
